edited the css to address contrast issue

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -136,7 +136,7 @@ footer {
 }
 
 .event-banner {
-    background-color: lightgreen;
+    background-color: rgb(63, 102, 52);
     padding: 20px;
     margin-bottom: 5px;
     grid-column: 1/3;
@@ -150,7 +150,7 @@ footer {
 }
 
 .card-weather {
-    background-color: lightgreen;
+    background-color: rgb(63, 102, 52);
     padding: 40px;
     grid-column: 3/4;
 
@@ -175,21 +175,21 @@ footer {
 
 
 .card-advertisements ul li:first-child {
-    background-color: lightgreen;
+    background-color: rgb(63, 102, 52);
     padding: 40px;
     text-align: center;
     grid-column: 1/2;
 }
 
 .card-advertisements ul li:nth-child(2) {
-    background-color: lightgreen;
+    background-color: rgb(63, 102, 52);
     padding: 40px;
     text-align: center;
     grid-column: 2/3;
 }
 
 .card-advertisements ul li:nth-child(3) {
-    background-color: lightgreen;
+    background-color: rgb(63, 102, 52);
     padding: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
@@ -269,18 +269,16 @@ h4 {
 
 .mode-text {
     position: absolute;
-    top: -20px;
+    top: 50%;
     left: calc(100% + 10px);
+    transform: translateY(-50%);
     color: #fff;
-    font-size: 14px;
+    font-size: 20px;
 }
 
 input:checked+.slider+.mode-text {
     content: "Dark Mode";
-}
-
-input:checked+.slider+.mode-text {
-    left: -80px;
+    right: calc(100% +10px);
 }
 
 .slider {
